[project]
name = "agent"
version = "0.1.0"
description = "A multi-agent system for auditing medical software lifecycle compliance according to IEC 62304 standard."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autogen-agentchat",
    "autogen-core",
    "autogen-ext[anthropic]",
    "pypdf",
    "python-docx",
    "openpyxl",
    "python-dotenv"
]
